force-app/main/default/objects/Property__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>StateCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>