force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Resident__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>